# Development

arreis/: Cargo.toml  arreis.db  package-lock.json  report.doc
arreis/arreis-core/: Cargo.toml
arreis/arreis-core/src/: agent.rs  lib.rs  llm.rs  memory.rs  tools.rs  workflow.rs
arreis/arreis-server/: Cargo.toml
arreis/arreis-server/migrations/: 20240101000000_initial_schema.sql  20240101000001_add_tool_ids.sql  20240101000002_add_workflow_graph.sql
arreis/arreis-server/src/: main.rs
arreis/arreis-web/: index.html  package-lock.json  package.json
arreis/arreis-web/src/: App.tsx
arreis/arreis-web/src/layouts/: DashboardLayout.tsx
arreis/arreis-web/src/lib/: api.ts
arreis/arreis-web/src/pages/: AgentBuilder.tsx  Agents.tsx  Dashboard.tsx  Playground.tsx  Settings.tsx  Tools.tsx
arreis/arreis-worker/: Cargo.toml
atlas/.agent/workflows/: update-agent.md
atlas/ap-landeed/: docker-compose.yml  package-lock.json  package.json
atlas/ap-landeed/scraper/: Cargo.toml
atlas/ap-landeed/scraper/migrations/: 001_initial.sql  002_multi_state.sql
atlas/ap-landeed/scraper/src/: api.rs  db.rs  error.rs  main.rs  models.rs  sms_activate.rs  worker.rs
atlas/ap-landeed/scraper/src/scraper/: browser.rs  captcha.rs  meebhoomi.rs  meebhoomi_new.rs  mod.rs  telangana.rs
atlas/ap-landeed/src/app/: globals.css  layout.tsx  page.tsx
atlas/ap-landeed/src/app/about/: page.tsx
atlas/ap-landeed/src/app/admin/: layout.tsx  page.tsx
atlas/ap-landeed/src/app/encumbrance/: page.tsx
atlas/ap-landeed/src/app/search/: page.tsx
atlas/ap-landeed/src/components/: Footer.tsx  Header.tsx  LandRecordCard.tsx  LandRecordMap.tsx  MapView.tsx  SearchBar.tsx
atlas/ap-landeed/src/lib/: api-config.ts
atlas/ap-landeed/src/lib/data/: districts.json  mandals.json  mock-records.json  telangana-districts.json
atlas/ap-landeed/src/lib/states/: index.ts
atlas/ap-landeed/src/types/: index.ts
atlas/ghost-shift-hunter/: agent.py  app.py  data_gen.py  models.py  project_atlas_ghost_shift_hunter.md  requirements.txt  use-case.md
atlas/ghost-shift-hunter-final/: DEPLOYMENT.md  README.md  deploy.sh
atlas/ghost-shift-hunter-final/backend/: .env  agent.py  data_gen.py  main.py  models.py  requirements.txt
atlas/ghost-shift-hunter-final/backend/uploads/: history.json
atlas/ghost-shift-hunter-final/frontend/: package-lock.json  package.json
atlas/ghost-shift-hunter-final/frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
atlas/ghost-shift-hunter-final/frontend/src/lib/: config.ts  (+2 more)
atlas/traba-atlas-prototype/: package-lock.json  package.json
atlas/traba-atlas-prototype/src/app/: globals.css  layout.tsx  page.tsx
atlas/traba-atlas-prototype/src/components/: agent-sidebar.tsx  metrics-bar.tsx  warehouse-map.tsx
atlas/traba-atlas-prototype/src/hooks/: use-simulation.ts
atlas/traba-atlas-prototype/src/lib/: types.ts
(+16 files in other folders)
