[package]
name = "arreis-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
thiserror = "2.0.17"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[features]
sqlite = []
