[package]
name = "ap-landeed-scraper"
version = "0.1.0"
edition = "2021"
authors = ["AP Landeed Team"]
description = "Headless scraper for AP land records from Meebhoomi and IGRS"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Headless browser
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }
futures = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "rust_decimal"] }
rust_decimal = { version = "1.36", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client (for downloading images, etc.)
reqwest = { version = "0.12", features = ["json"] }

# Base64 for CAPTCHA images
base64 = "0.22"

# Environment variables
dotenvy = "0.15"

# Image processing for CAPTCHA
image = "0.25"

# Regex for OTP extraction
regex = "1.10"

[dev-dependencies]
tokio-test = "0.4"
